feat: 主题色命名

--- a/app.wxss
+++ b/app.wxss
@@ -2,7 +2,11 @@ page {
   position: relative;
   min-height: 100vh;
   background-color: #f5f6f8;
-  --theme-color: #169dfe;
+  --blue-1: #00A5FF;
+  --blue-2: #00C8FF;
+  --gray-1: #595959;
+
+  --theme-color: #00A5FF;
   --theme-color-gradient: linear-gradient(90deg, #6097f7 0%, #86abeb 100%);
   --theme-color-btn-bg: linear-gradient(90deg, #00cffc 0%, #0095fa 100%);
 }
