--- a/pages/subpages/mall/goods/subpages/order-check/components/pickup-address-popup/index.wxss
+++ b/pages/subpages/mall/goods/subpages/order-check/components/pickup-address-popup/index.wxss
@@ -10,7 +10,7 @@
   text-align: center;
 }
 .add-btn {
-  color: var(--theme-color);
+  color: var(--blue-1);
   font-size: 28rpx;
 }
 
@@ -58,5 +58,5 @@
   color: #fff;
   font-size: 28rpx;
   border-radius: 40rpx;
-  background: var(--theme-color);
+  background: var(--blue-1);
 }
