--- a/pages/subpages/mine/order-center/components/meal-ticket-order-list/index.wxss
+++ b/pages/subpages/mine/order-center/components/meal-ticket-order-list/index.wxss
@@ -14,7 +14,7 @@
   font-weight: 500;
 }
 .order-status {
-  color: var(--theme-color);
+  color: var(--blue-1);
 }
 
 .list-content {
@@ -40,13 +40,13 @@
   line-height: 54rpx;
   text-align: center;
   font-size: 26rpx;
-  color: var(--theme-color);
+  color: var(--blue-1);
   border-radius: 28rpx;
-  border: 1rpx solid var(--theme-color);
+  border: 1rpx solid var(--blue-1);
 }
 .btn.active {
   color: #fff;
-  background: var(--theme-color);
+  background: var(--blue-1);
 }
 .btn:last-child {
   margin-right: 0;
