--- a/pages/subpages/mine/promoter-center/subpages/account/subpages/bind-bank/index.wxss
+++ b/pages/subpages/mine/promoter-center/subpages/account/subpages/bind-bank/index.wxss
@@ -28,7 +28,7 @@
   height: 110rpx;
   color: #fff;
   font-size: 36rpx;
-  background: var(--theme-color);
+  background: var(--blue-1);
   border-radius: 55rpx;
   opacity: 0.5;
 }
