--- a/pages/subpages/mine/promoter-center/subpages/account/subpages/withdraw/index.wxss
+++ b/pages/subpages/mine/promoter-center/subpages/account/subpages/withdraw/index.wxss
@@ -136,7 +136,7 @@
   height: 94rpx;
   color: #fff;
   font-size: 36rpx;
-  background: var(--theme-color);
+  background: var(--blue-1);
   border-radius: 47rpx;
   z-index: 100%;
   opacity: 0.5;
