--- a/components/auth-modal/index.wxss
+++ b/components/auth-modal/index.wxss
@@ -33,6 +33,6 @@
   height: 88rpx;
   color: #fff;
   font-size: 36rpx;
-  background: var(--theme-color);
+  background: var(--blue-1);
   border-radius: 44rpx;
 }
