--- a/pages/subpages/common/search/index.wxss
+++ b/pages/subpages/common/search/index.wxss
@@ -24,7 +24,7 @@
   border-right: 1px solid #e1e1e1;
 }
 .calendar-item {
-  color: var(--theme-color);
+  color: var(--blue-1);
   font-size: 20rpx;
   font-weight: bold;
   line-height: 1.2;
