--- a/pages/subpages/mall/catering/subpages/restaurant-detail/subpages/qa-list/subpages/qa-detail/index.wxss
+++ b/pages/subpages/mall/catering/subpages/restaurant-detail/subpages/qa-list/subpages/qa-detail/index.wxss
@@ -138,7 +138,7 @@
   font-size: 30rpx;
   font-weight: 500;
   border-radius: 40rpx;
-  background: var(--theme-color-btn-bg);
+  background: var(--blue-1-btn-bg);
 }
 
 .delete-btn {
