--- a/pages/subpages/mall/goods/subpages/order-check/components/pickup-time-popup/index.wxss
+++ b/pages/subpages/mall/goods/subpages/order-check/components/pickup-time-popup/index.wxss
@@ -10,7 +10,7 @@
   text-align: center;
 }
 .add-btn {
-  color: var(--theme-color);
+  color: var(--blue-1);
   font-size: 28rpx;
 }
 
@@ -45,11 +45,11 @@
 .default-icon {
   margin-left: 24rpx;
   padding: 6rpx 8rpx;
-  color: var(--theme-color);
+  color: var(--blue-1);
   font-size: 20rpx;
   line-height: 1;
   border-radius: 8rpx;
-  border: 2rpx solid var(--theme-color);
+  border: 2rpx solid var(--blue-1);
 }
 .address-detail {
   margin-top: 16rpx;
@@ -65,5 +65,5 @@
   color: #fff;
   font-size: 28rpx;
   border-radius: 40rpx;
-  background: var(--theme-color);
+  background: var(--blue-1);
 }
