--- a/pages/subpages/mall/scenic-spot/components/scenic-spot-item/index.wxss
+++ b/pages/subpages/mall/scenic-spot/components/scenic-spot-item/index.wxss
@@ -42,7 +42,7 @@
 .label {
   margin-right: 10rpx;
   padding: 2rpx 10rpx;
-  color: var(--theme-color);
+  color: var(--blue-1);
   font-size: 18rpx;
   background: #ebf2fd;
   border-radius: 10rpx;
