--- a/pages/tab-bar-pages/home/index.wxss
+++ b/pages/tab-bar-pages/home/index.wxss
@@ -71,7 +71,7 @@
   width: 48px;
   height: 26px;
   border-radius: 15px;
-  background: var(--theme-color);
+  background: var(--blue-1);
 }
 
 .content-wrap {
