--- a/pages/tab-bar-pages/mine/index.wxss
+++ b/pages/tab-bar-pages/mine/index.wxss
@@ -176,7 +176,7 @@
   bottom: 0;
   width: 25vw;
   height: 4rpx;
-  background: var(--theme-color);
+  background: var(--blue-1);
   transition: left .2s ease;
 }
 
