--- a/pages/tab-bar-pages/mine/index.wxml
+++ b/pages/tab-bar-pages/mine/index.wxml
@@ -40,7 +40,7 @@
         <view class="function-desc">订单中心</view>
       </navigator>
       <navigator class="function-item" url="/pages/subpages/mine/address-list/index" hover-class="none">
-        <image class="function-icon" src="https://img.ubo.vip/tiddler/mine/address.png" />
+        <image class="function-icon" src="./images/address.png" />
         <view class="function-desc">收货地址</view>
       </navigator>
       <navigator class="function-item" url="/pages/subpages/mine/coupon-list/index" hover-class="none">
@@ -57,8 +57,8 @@
         <view class="function-desc">我的余额</view>
       </navigator>
       <view class="function-item" wx:if="{{userInfo.level}}" bindtap="navToPromoterCenter">
-        <image class="function-icon" src="./images/promoter_center.png" />
-        <view class="function-desc">推广中心</view>
+        <image class="function-icon" src="./images/promoter.png" />
+        <view class="function-desc">代言奖励</view>
       </view>
       <navigator 
         class="function-item" 
@@ -66,19 +66,19 @@
         url="/pages/subpages/mine/merchant-center/index" 
         hover-class="none"
       >
-        <image class="function-icon" src="https://img.ubo.vip/tiddler/mine/shop.png" />
+        <image class="function-icon" src="./images/merchant.png" />
         <view class="function-desc">商家中心</view>
       </navigator>
-      <!-- <view class="function-item" bindtap="navToLive">
-        <image class="function-icon" src="https://img.ubo.vip/tiddler/mine/live.png" />
+      <view class="function-item" bindtap="navToLive">
+        <image class="function-icon" src="./images/live.png" />
         <view class="function-desc">我的直播</view>
-      </view> -->
+      </view>
       <navigator class="function-item" url="/pages/subpages/mine/history/index" hover-class="none">
         <image class="function-icon" src="./images/history.png" />
         <view class="function-desc">浏览历史</view>
       </navigator>
       <view class="function-item" bindtap="navToSetting">
-        <image class="function-icon" src="https://img.ubo.vip/tiddler/mine/setting.png" />
+        <image class="function-icon" src="./images/setting.png" />
         <view class="function-desc">更多设置</view>
       </view>
     </view>
