--- a/pages/subpages/mine/merchant-center/index.wxss
+++ b/pages/subpages/mine/merchant-center/index.wxss
@@ -1,245 +1,27 @@
-.nav-bar {
-  position: fixed;
-  top: 0;
-  left: 0;
-  padding-left: 8px;
-  height: 44px;
-  width: 100%;
-  box-sizing: inherit;
-  background: #22242C;
-  z-index: 100;
-}
-
-.search-bar {
-  margin-left: 4px;
-  padding: 0 15px;
-  height: 32px;
-  border-radius: 16px;
-  background: #f5f6f7;
-}
-.search-icon {
-  margin-left: 12px;
-  width: 13px;
-  height: 13px;
-}
-.placeholder {
-  color: #999;
-  font-size: 14px;
-}
-
-.header {
-  padding: 32rpx;
-  background: #22242C;
-}
-
-.product-menu {
-  display: flex;
-  align-items: center;
-  height: 92rpx;
-  padding: 0 8rpx;
+.list-wrap {
+  margin-bottom: 12rpx;
+  padding: 0 24rpx;
   background: #fff;
-  border-radius: 46rpx;
+  border-top: 1px solid #f5f6f7;
 }
-.product-menu-item {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 0 6rpx;
-  height: 68rpx;
-  flex: 1;
-  color: #333;
-  font-size: 26rpx;
-  border-radius: 34rpx;
-}
-.product-menu-item.active {
-  color: #fff;
-  background: var(--blue-1);
-} 
-
-.shop-info-wrap {
-  margin-top: 32rpx;
-}
-.avatar-wrap {
-  position: relative;
-  width: 88rpx;
-  height: 88rpx;
-  font-size: 0;
-  border-radius: 50%;
-}
-.shop-logo {
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  border: 1px solid #fff;
-}
-.enterprise-label {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  width: 30rpx;
-  height: 30rpx;
-}
-.info {
-  margin: 0 24rpx;
-  flex: 1;
-}
-.shop-name {
-  color: #fff;
-  font-size: 30rpx;
-  font-weight: 550;
-}
-.authentication {
-  margin-top: 8rpx;
-  padding: 0 16rpx;
-  height: 32rpx;
-  width: fit-content;
-  color: #404A5C;
-  font-size: 18rpx;
-  line-height: 1;
-  font-weight: bold;
-  border-radius: 16rpx;
-  background: linear-gradient(315deg, #DAB174 0%, #FFE5BD 100%);
-}
-.shop-logo {
-  width: 90rpx;
-  height: 90rpx;
-  border-radius: 50%;
-  border: 1px solid #fff;
-}
-
-.data-card {
-  position: relative;
-  margin-top: 32rpx;
-  height: 336rpx;
-  color: #fff;
-  border-radius: 48rpx;
-  background: linear-gradient(135deg, #FE918D 0%, #FF4B7F 100%);
-  overflow: hidden;
-}
-
-.bg {
-  position: absolute;
-  right: -30rpx;
-  bottom: -45rpx;
-  width: 240rpx;
-  height: 266rpx;
-}
-
-.main {
-  position: absolute;
-  top: 0;
-  left: 0;
-  padding: 32rpx;
-  width: 100%;
-  height: 100%;
-}
-.balance-data-title {
-  color: #FFCDD7;
-  font-size: 30rpx;
-}
-.balance-data-amount {
-  font-size: 56rpx;
-  font-weight: bold;
-}
-.data-items-wrap {
-  margin-top: 48rpx;
-}
-.data-title, .data-supplement {
-  color: #FFCDD7;
-  font-size: 22rpx;
-}
-.data-amount {
-  font-size: 36rpx;
-  font-weight: bold;
-}
-
-.withdraw-btn {
-  position: absolute;
-  top: 32rpx;
-  right: 32rpx;
-  color: #fff;
-  font-size: 26rpx;
-  width: 160rpx;
-  height: 60rpx;
-  border-radius: 30rpx;
-  border: 1px solid #fff;
-}
-
-.btns-wrap {
-  margin-top: 40rpx;
-}
-.btn {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.btn-icon-wrap {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100rpx;
+.list {
   height: 100rpx;
-  background: #373B40;
-  border-radius: 50%;
+  border-bottom: 1px solid #f5f6f7;
 }
-.btn-icon {
-  width: 40rpx;
-  height: 40rpx;
+.list:last-child {
+  border-bottom: none;
 }
-.btn-title {
-  margin-top: 8rpx;
-  color: #fff;
-  font-size: 22rpx;
+.title {
+  color: #333;
+  font-size: 28rpx;
+  font-weight: 500;
 }
-
-.menu-wrap {
-  display: flex;
-  align-items: center;
-  width: 100%;
-  height: 40px;
-  background: #fff;
-  border-top: 1px solid #f5f6f8;
-}
-.menu-wrap.fixed {
-  position: fixed;
-  left: 0;
-}
-.menu-item {
-  flex: 1;
-  height: 40px;
+.content {
   color: #666;
-  font-size: 14px;
-}
-.menu-item.selected {
-  position: relative;
-  color: var(--blue-1);
-  font-size: 15px;
-  font-weight: bold;
-}
-.menu-item.selected::after {
-  position: absolute;
-  bottom: 2px;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 15px;
-  height: 3px;
-  content: '';
-  border-radius: 1.5px;
-  background: var(--blue-1);
-}
-
-
-.order-list-wrap {
-  padding: 24rpx;
-}
-.order-list-wrap.fixed {
-  margin-top: 40px;
-}
-
-.no-more-tips {
-  margin-top: 36rpx;
-  color: #999;
   font-size: 24rpx;
-  text-align: center;
 }
-
+.arrow {
+  margin-left: 6rpx;
+  width: 24rpx;
+  height: 24rpx;
+}
