--- a/pages/tab-bar-pages/promoter/index.wxss
+++ b/pages/tab-bar-pages/promoter/index.wxss
@@ -8,11 +8,9 @@
   width: 100%;
 }
 .title {
-  padding-top: 18rpx;
-  padding-left: 56rpx;
-  color: #333;
-  font-size: 32rpx;
-  font-weight: 500;
+  margin-left: 56rpx;
+  width: 312rpx;
+  height: 71rpx;
 }
 
 .content-wrap {
@@ -24,12 +22,13 @@
 }
 .illus {
   position: absolute;
-  top: -188rpx;
+  top: -168rpx;
   right: 0;
   width: 498rpx;
   height: 366rpx;
 }
 .content-title {
+  margin-top: 24rpx;
   color: #141925;
   font-size: 48rpx;
   font-weight: 600;
