--- a/pages/subpages/mine/setting/subpages/user-info-setting/index.wxml
+++ b/pages/subpages/mine/setting/subpages/user-info-setting/index.wxml
@@ -1,6 +1,6 @@
 <view class="container">
   <view class="header row center">
-    <image class="bg" src="{{userInfo.bg || 'https://img.ubo.vip/tiddler/temp/bg.jpg'}}" mode="aspectFill" />
+    <image class="bg" src="{{userInfo.bg || 'https://static.tiddler.cn/mp/bg.png'}}" mode="aspectFill" />
     <view class="avatar-wrap" bindtap="cropAvatar">
       <image class="avatar" src="{{userInfo.avatar}}" mode="aspectFill" />
       <view class="avatar-edit-btn row center">
