--- a/pages/tab-bar-pages/mine/index.wxml
+++ b/pages/tab-bar-pages/mine/index.wxml
@@ -1,7 +1,7 @@
 <wxs module="NUM" src="/utils/filters/num.wxs" />
 
 <view class="nav-bar row" style="padding-top: {{statusBarHeight}}px;">
-  <image class="nav-bg" wx:if="{{navBarVisible}}" src="{{userInfo.bg || 'https://img.ubo.vip/tiddler/temp/bg.jpg'}}" />
+  <image class="nav-bg" wx:if="{{navBarVisible}}" src="{{userInfo.bg || 'https://static.tiddler.cn/mp/bg.png'}}" />
   <view class="bg-cover" wx:if="{{navBarVisible}}" />
   <image class="sign-in-icon" src="/images/sign_in.png" />
   <image class="mine-avatar" wx:if="{{navBarVisible}}" src="{{userInfo.avatar}}" />
@@ -9,7 +9,7 @@
 </view>
 
 <view class="container">
-  <image class="bg" src="{{userInfo.bg || 'https://img.ubo.vip/tiddler/temp/bg.jpg'}}" bindtap="navToUserInfoSetting" mode="aspectFill" />
+  <image class="bg" src="{{userInfo.bg || 'https://static.tiddler.cn/mp/bg.png'}}" bindtap="navToUserInfoSetting" mode="aspectFill" />
   <view class="content">
     <view class="avatar-wrap">
       <image class="avatar" bindtap="navToUserInfoSetting" src="{{userInfo.avatar}}" />
