--- a/pages/tab-bar-pages/promoter/index.wxml
+++ b/pages/tab-bar-pages/promoter/index.wxml
@@ -32,13 +32,13 @@
       购买家乡特色商品，可获得以下权益
     </view>
     <view class="rights-list">
-      <view class="rights-item" wx:for="{{ARRAY.slice(rightsList, 0, 4)}}" wx::key="index">
+      <view class="rights-item" wx:for="{{ARRAY.slice(rightsList, 0, 4)}}" wx:key="index">
         <image class="rights-icon" src="https://static.tiddler.cn/mp/promoter/{{item.icon}}.png" />
         <view class="rights-name">{{item.name}}</view>
       </view>
     </view>
     <view class="rights-list">
-      <view class="rights-item" wx:for="{{ARRAY.slice(rightsList, 4)}}" wx::key="index">
+      <view class="rights-item" wx:for="{{ARRAY.slice(rightsList, 4)}}" wx:key="index">
         <image class="rights-icon" src="https://static.tiddler.cn/mp/promoter/{{item.icon}}.png" />
         <view class="rights-name">{{item.name}}</view>
       </view>
