--- a/pages/subpages/mine/merchant-center/index.wxss
+++ b/pages/subpages/mine/merchant-center/index.wxss
@@ -1,27 +1,128 @@
-.list-wrap {
-  margin-bottom: 12rpx;
-  padding: 0 24rpx;
-  background: #fff;
-  border-top: 1px solid #f5f6f7;
+.nav-bar-wrap {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 100;
 }
-.list {
-  height: 100rpx;
-  border-bottom: 1px solid #f5f6f7;
+.nav-bar {
+  padding: 0 8px;
+  height: 44px;
 }
-.list:last-child {
-  border-bottom: none;
-}
-.title {
+.nav-bar-title {
+  flex: 1;
   color: #333;
-  font-size: 28rpx;
-  font-weight: 500;
+  font-size: 16px;
+  font-weight: 550;
+  text-align: center;
 }
-.content {
-  color: #666;
+.switch-icon {
+  margin-left: 6px;
+  width: 15px;
+  height: 15px;
+}
+
+.container {
+  position: relative;
+  padding: 24rpx;
+  min-height: 100vh;
+  background: linear-gradient(180deg, #EDF6FE 20%, #F6F6F6 55%);
+}
+.bg {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 400rpx;
+  height: 400rpx;
+}
+
+.data-card {
+  position: relative;
+  height: 336rpx;
+  color: #fff;
+  border-radius: 48rpx;
+  background: linear-gradient(135deg, #67BAF6 0%, #2769F7 100%);
+  overflow: hidden;
+}
+.data-card-bg {
+  position: absolute;
+  right: -30rpx;
+  bottom: -45rpx;
+  width: 240rpx;
+  height: 266rpx;
+}
+.data-card-main {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 32rpx;
+  width: 100%;
+  height: 100%;
+}
+.balance-data-title {
+  color: #fff;
+  font-size: 30rpx;
+}
+.balance-data-amount {
+  font-size: 56rpx;
+  font-weight: bold;
+}
+.data-items-wrap {
+  margin-top: 48rpx;
+}
+.data-title, .data-supplement {
+  color: #fff;
+  font-size: 22rpx;
+}
+.data-amount {
+  font-size: 36rpx;
+  font-weight: bold;
+}
+.withdraw-btn {
+  position: absolute;
+  top: 32rpx;
+  right: 32rpx;
+  color: #fff;
+  font-size: 26rpx;
+  width: 160rpx;
+  height: 60rpx;
+  border-radius: 30rpx;
+  border: 1px solid #fff;
+}
+
+.tool-card {
+  margin-top: 24rpx;
+  background: #fff;
+  border-radius: 48rpx;
+}
+.tool-card-title {
+  padding: 32rpx;
+  color: #141925;
+  font-size: 30rpx;
+  font-weight: 500;
+  line-height: 1;
+}
+.check-btn {
+  color: #999;
   font-size: 24rpx;
 }
-.arrow {
-  margin-left: 6rpx;
+.check-btn-arrow {
   width: 24rpx;
   height: 24rpx;
+}
+.tool-list {
+  flex-wrap: wrap;
+}
+.tool-item {
+  margin-bottom: 32rpx;
+  width: 25%;
+  text-align: center;
+}
+.tool-icon {
+  width: 50rpx;
+  height: 50rpx;
+}
+.tool-name {
+  color: #333;
+  font-size: 24rpx;
 }
